--- a/Texte/Rau_2010.md
+++ b/Texte/Rau_2010.md
@@ -5,35 +5,35 @@ Inauguraldissertation zur Erlangung des Grades eines Doktors der Philosophie im 
 Frankfurt a.M. 2010
 (Rau 2010)
 
-5. Empirischer Teil: ›Psychopolitik‹ und subjektivierte Arbeitsverhältnisse in der IT-Branche
+5. Empirischer Teil: 'Psychopolitik' und subjektivierte Arbeitsverhältnisse in der IT-Branche
 ==============================================================================
 
 Die 'Kraft des Ungenügens' – Erschöpfung
 ----------------------------------------
-"Die erste Linie, mit der sich zeigen lässt, dass in subjektivierten Arbeitsverhältnissen auf dem Feld des Psychischen operiert wird, lautet der Logik nach dementsprechend: Den strukturellen Ausgangspunkt bildet die Maßlosigkeit der Arbeit; die ›Kraft des Ungenügens‹ markiert den affektiven Effekt; die affektive Dynamik ist durch ›Selbstverhetzung‹ gekennzeichnet; die Kunst zur Verteidigung des Selbst besteht im Nein-Sagen; die Last der Psyche ist die Erschöpfung."
+"Die erste Linie, mit der sich zeigen lässt, dass in subjektivierten Arbeitsverhältnissen auf dem Feld des Psychischen operiert wird, lautet der Logik nach dementsprechend: Den strukturellen Ausgangspunkt bildet die Maßlosigkeit der Arbeit; die 'Kraft des Ungenügens' markiert den affektiven Effekt; die affektive Dynamik ist durch 'Selbstverhetzung' gekennzeichnet; die Kunst zur Verteidigung des Selbst besteht im Nein-Sagen; die Last der Psyche ist die Erschöpfung."
 (303)
 
 Allein sein – Nur man selbst sein
 ---------------------------------
-"Die zweite Linie, die im Rahmen subjektivierter Arbeitsverhältnisse auf ein politisches Spiel auf dem Feld des Psychischen verweist, beginnt demnach bei der strukturellen Flexibilisierung von Raum und Zeit. Die affektive Dynamik ist durch Vereinzelung gekennzeichnet; der affektive Effekt besteht im Alleinsein; die Kunst zur Verteidigung des Selbst ist durch ein soziales Zuhausemachen gekennzeichnet; die Last der Psyche ist durch den Zustand, ›nur man selbst sein zu können‹ markiert."
+"Die zweite Linie, die im Rahmen subjektivierter Arbeitsverhältnisse auf ein politisches Spiel auf dem Feld des Psychischen verweist, beginnt demnach bei der strukturellen Flexibilisierung von Raum und Zeit. Die affektive Dynamik ist durch Vereinzelung gekennzeichnet; der affektive Effekt besteht im Alleinsein; die Kunst zur Verteidigung des Selbst ist durch ein soziales Zuhausemachen gekennzeichnet; die Last der Psyche ist durch den Zustand, 'nur man selbst sein zu können' markiert."
 (311)
 
 Selbstverhaftung/Haftbarmachung des Selbst – Angst
 --------------------------------------------------
-"Zusammengefasst bedeutet dies für die Logik der dritten ›psychopolitischen Linie‹: Die Verbindung aus Zeitverknappung und strukturellen Widersprüchen, die individuell zu lösen sind, bilden den Ausgangspunkt; die affektive Dynamik ist die Bewegung des Bedrücktwerdens als einem Druck, der nach ›Innen‹ geht; der affektive Effekt besteht in der Selbstverhaftung an die Arbeit, die gleichsam eine Haftbarmachung des Selbst impliziert; die Last der Psyche zeigt sich in der Angst (in schwacher Form in der Nervosität); schließlich gehört hier zur Kunst der Verteidigung des Selbst die Neubesetzung des Selbst."
+"Zusammengefasst bedeutet dies für die Logik der dritten 'psychopolitischen Linie': Die Verbindung aus Zeitverknappung und strukturellen Widersprüchen, die individuell zu lösen sind, bilden den Ausgangspunkt; die affektive Dynamik ist die Bewegung des Bedrücktwerdens als einem Druck, der nach 'Innen' geht; der affektive Effekt besteht in der Selbstverhaftung an die Arbeit, die gleichsam eine Haftbarmachung des Selbst impliziert; die Last der Psyche zeigt sich in der Angst (in schwacher Form in der Nervosität); schließlich gehört hier zur Kunst der Verteidigung des Selbst die Neubesetzung des Selbst."
 (317)
 
-Persönliche Identifizierung – Schuld
+Persönliche Identifizierung – Schuld
 -------------------------------------
-"Die vierte ›psychopolitische Linie‹ heißt dementsprechend: Den Ausgangspunkt bildet eine strukturell als Kontrollmodus in den Arbeitsprozess eingelassene Selbstverantwortung; die affektive Dynamik zeigt sich in einer Sorge um persönlichen Erfolg; der affektive Effekt besteht in der persönlichen Identifizierung; die Last der Psyche erscheint als Schuld; die Kunst zur Verteidigung des Selbst besteht in der Herstellung einer solidarischen, kollektiven Praxis zur Schuldabschwächung oder -vermeidung."
+"Die vierte 'psychopolitische Linie' heißt dementsprechend: Den Ausgangspunkt bildet eine strukturell als Kontrollmodus in den Arbeitsprozess eingelassene Selbstverantwortung; die affektive Dynamik zeigt sich in einer Sorge um persönlichen Erfolg; der affektive Effekt besteht in der persönlichen Identifizierung; die Last der Psyche erscheint als Schuld; die Kunst zur Verteidigung des Selbst besteht in der Herstellung einer solidarischen, kollektiven Praxis zur Schuldabschwächung oder -vermeidung."
 (323)
 
 Politiker-Sein – Selbstabwertung
 --------------------------------
-"Eine fünfte ›psychopolitische Linie‹ lautet dementsprechend: Kooperative Kommunikation und	wechselseitige	kommunikative	Abhängigkeit	markieren	den	strukturellen Ausgangspunkt; der affektive Effekt besteht in dem Zwang, Politiker zu sein. Die affektive Dynamik erweist sich als virtuose Inszenierung von Souveränität. Die Last der Psyche ist durch Selbstzweifel und Selbstabwertung gekennzeichnet; die Verteidigung des Selbst erfolgt als eine Aktualisierung der Wertschätzung des Selbst."
+"Eine fünfte 'psychopolitische Linie' lautet dementsprechend: Kooperative Kommunikation und	wechselseitige	kommunikative	Abhängigkeit	markieren	den	strukturellen Ausgangspunkt; der affektive Effekt besteht in dem Zwang, Politiker zu sein. Die affektive Dynamik erweist sich als virtuose Inszenierung von Souveränität. Die Last der Psyche ist durch Selbstzweifel und Selbstabwertung gekennzeichnet; die Verteidigung des Selbst erfolgt als eine Aktualisierung der Wertschätzung des Selbst."
 (337)
 
 Individualisierung zu Bedingungen der Masse
 -------------------------------------------
-"Eine sechste ›psychopolitische Linie‹ sei nur angedeutet, da ich sie nicht hinreichend durch das empirische Material absichern kann. Hier kommt der Raum als strukturelle Ausgangsgröße stärker ins Spiel: Einige der Interviewten haben ihren (festen oder mobilen) Arbeitsplatz in Großraumbüros. Da die Arbeitsanforderung für alle bedeutet, sowohl Denkarbeit als auch kommunikative Arbeit zu leisten, ist es für viele der Beschäftigten in stets lauten und offenen Räumen schwierig, konzentriert zu arbeiten. Die affektive Dynamik, die in Gang ist, könnte als ›Individualisierung zu Bedingungen der Masse‹ bezeichnet werden: Mehr oder weniger alle arbeiten in Verhältnissen, die sie ständig als Einzelkämpfer anruft, sie zugleich aber in infrastrukturellen Bedingungen platziert, die Menschen als Masse adressieren. Der affektive Effekt besteht dabei in dem Gefühl permanenten ›Öffentlichseins‹, das heißt, auf der Arbeit gibt es keinen Bereich, der tatsächliche Intimität erlauben würde. Alle hören potenziell immer alles mit und sehen, was andere tun und lassen (damit lässt sich natürlich das Öffentlichsein in Kategorien einer indirekten Steuerung entsprechenden Kontrolle diskutieren – die direkte Kontrolle wird u.a. durch das Öffentlichsein abgelöst –, darauf will ich hier aber nicht abheben). Iw3 etwa bemerkt, in der Freizeit habe man »Einsamkeit und Zweisamkeit«, auf der Arbeit hingegen nicht, »weil man immer Kollegen um sich rum hat, auch eigentlich immer beobachtet und auch beobachtet ist«. Ihr fehle dort ein »Rückzugsraum«. Der »einzige Rückzugsraum«, der existiere, sagt sie weiter, »das praktizieren da ja auch einige Kollegen, dass sie sich mal so ein Walkman aufsetzen, wie eine Kapsel haben«. Von ähnlichen Strategien der Beschäftigten berichtet etwa auch Im13. Zu vermuten ist demnach, dass die Last der Psyche in einer Art ›Bedrängnis‹ durch die Öffentlichkeit besteht. Man ist immer einem öffentlichen Blick ausgesetzt und von ihm bedrängt. Die Kunst der Verteidigung des Selbst setzt entsprechend als ein ›Schutz vor der Öffentlichkeit‹ an. Neben dem Walkman ließe sich das vielfach bevorzugte Arbeiten im Homeoffice anführen."
+"Eine sechste 'psychopolitische Linie' sei nur angedeutet, da ich sie nicht hinreichend durch das empirische Material absichern kann. Hier kommt der Raum als strukturelle Ausgangsgröße stärker ins Spiel: Einige der Interviewten haben ihren (festen oder mobilen) Arbeitsplatz in Großraumbüros. Da die Arbeitsanforderung für alle bedeutet, sowohl Denkarbeit als auch kommunikative Arbeit zu leisten, ist es für viele der Beschäftigten in stets lauten und offenen Räumen schwierig, konzentriert zu arbeiten. Die affektive Dynamik, die in Gang ist, könnte als 'Individualisierung zu Bedingungen der Masse' bezeichnet werden: Mehr oder weniger alle arbeiten in Verhältnissen, die sie ständig als Einzelkämpfer anruft, sie zugleich aber in infrastrukturellen Bedingungen platziert, die Menschen als Masse adressieren. Der affektive Effekt besteht dabei in dem Gefühl permanenten 'Öffentlichseins', das heißt, auf der Arbeit gibt es keinen Bereich, der tatsächliche Intimität erlauben würde. Alle hören potenziell immer alles mit und sehen, was andere tun und lassen (damit lässt sich natürlich das Öffentlichsein in Kategorien einer indirekten Steuerung entsprechenden Kontrolle diskutieren – die direkte Kontrolle wird u.a. durch das Öffentlichsein abgelöst –, darauf will ich hier aber nicht abheben). Iw3 etwa bemerkt, in der Freizeit habe man »Einsamkeit und Zweisamkeit«, auf der Arbeit hingegen nicht, »weil man immer Kollegen um sich rum hat, auch eigentlich immer beobachtet und auch beobachtet ist«. Ihr fehle dort ein »Rückzugsraum«. Der »einzige Rückzugsraum«, der existiere, sagt sie weiter, »das praktizieren da ja auch einige Kollegen, dass sie sich mal so ein Walkman aufsetzen, wie eine Kapsel haben«. Von ähnlichen Strategien der Beschäftigten berichtet etwa auch Im13. Zu vermuten ist demnach, dass die Last der Psyche in einer Art 'Bedrängnis' durch die Öffentlichkeit besteht. Man ist immer einem öffentlichen Blick ausgesetzt und von ihm bedrängt. Die Kunst der Verteidigung des Selbst setzt entsprechend als ein 'Schutz vor der Öffentlichkeit' an. Neben dem Walkman ließe sich das vielfach bevorzugte Arbeiten im Homeoffice anführen."
 (337)
