--- a/Texte/Rau_2010.md
+++ b/Texte/Rau_2010.md
@@ -35,5 +35,5 @@ Politiker-Sein – Selbstabwertung
 
 Individualisierung zu Bedingungen der Masse
 -------------------------------------------
-"Eine sechste 'psychopolitische Linie' sei nur angedeutet, da ich sie nicht hinreichend durch das empirische Material absichern kann. Hier kommt der Raum als strukturelle Ausgangsgröße stärker ins Spiel: Einige der Interviewten haben ihren (festen oder mobilen) Arbeitsplatz in Großraumbüros. Da die Arbeitsanforderung für alle bedeutet, sowohl Denkarbeit als auch kommunikative Arbeit zu leisten, ist es für viele der Beschäftigten in stets lauten und offenen Räumen schwierig, konzentriert zu arbeiten. Die affektive Dynamik, die in Gang ist, könnte als 'Individualisierung zu Bedingungen der Masse' bezeichnet werden: Mehr oder weniger alle arbeiten in Verhältnissen, die sie ständig als Einzelkämpfer anruft, sie zugleich aber in infrastrukturellen Bedingungen platziert, die Menschen als Masse adressieren. Der affektive Effekt besteht dabei in dem Gefühl permanenten 'Öffentlichseins', das heißt, auf der Arbeit gibt es keinen Bereich, der tatsächliche Intimität erlauben würde. Alle hören potenziell immer alles mit und sehen, was andere tun und lassen (damit lässt sich natürlich das Öffentlichsein in Kategorien einer indirekten Steuerung entsprechenden Kontrolle diskutieren – die direkte Kontrolle wird u.a. durch das Öffentlichsein abgelöst –, darauf will ich hier aber nicht abheben). Iw3 etwa bemerkt, in der Freizeit habe man »Einsamkeit und Zweisamkeit«, auf der Arbeit hingegen nicht, »weil man immer Kollegen um sich rum hat, auch eigentlich immer beobachtet und auch beobachtet ist«. Ihr fehle dort ein »Rückzugsraum«. Der »einzige Rückzugsraum«, der existiere, sagt sie weiter, »das praktizieren da ja auch einige Kollegen, dass sie sich mal so ein Walkman aufsetzen, wie eine Kapsel haben«. Von ähnlichen Strategien der Beschäftigten berichtet etwa auch Im13. Zu vermuten ist demnach, dass die Last der Psyche in einer Art 'Bedrängnis' durch die Öffentlichkeit besteht. Man ist immer einem öffentlichen Blick ausgesetzt und von ihm bedrängt. Die Kunst der Verteidigung des Selbst setzt entsprechend als ein 'Schutz vor der Öffentlichkeit' an. Neben dem Walkman ließe sich das vielfach bevorzugte Arbeiten im Homeoffice anführen."
+"Eine sechste 'psychopolitische Linie' sei nur angedeutet, da ich sie nicht hinreichend durch das empirische Material absichern kann. Hier kommt der Raum als strukturelle Ausgangsgröße stärker ins Spiel: Einige der Interviewten haben ihren (festen oder mobilen) Arbeitsplatz in Großraumbüros. Da die Arbeitsanforderung für alle bedeutet, sowohl Denkarbeit als auch kommunikative Arbeit zu leisten, ist es für viele der Beschäftigten in stets lauten und offenen Räumen schwierig, konzentriert zu arbeiten. Die affektive Dynamik, die in Gang ist, könnte als 'Individualisierung zu Bedingungen der Masse' bezeichnet werden: Mehr oder weniger alle arbeiten in Verhältnissen, die sie ständig als Einzelkämpfer anruft, sie zugleich aber in infrastrukturellen Bedingungen platziert, die Menschen als Masse adressieren. Der affektive Effekt besteht dabei in dem Gefühl permanenten 'Öffentlichseins', das heißt, auf der Arbeit gibt es keinen Bereich, der tatsächliche Intimität erlauben würde. Alle hören potenziell immer alles mit und sehen, was andere tun und lassen (damit lässt sich natürlich das Öffentlichsein in Kategorien einer indirekten Steuerung entsprechenden Kontrolle diskutieren – die direkte Kontrolle wird u.a. durch das Öffentlichsein abgelöst –, darauf will ich hier aber nicht abheben). Iw3 etwa bemerkt, in der Freizeit habe man »Einsamkeit und Zweisamkeit«, auf der Arbeit hingegen nicht, »weil man immer Kollegen um sich rum hat, auch eigentlich immer beobachtet und auch beobachtet ist«. Ihr fehle dort ein »Rückzugsraum«. Der »einzige Rückzugsraum«, der existiere, sagt sie weiter, »das praktizieren da ja auch einige Kollegen, dass sie sich mal so ein Walkman aufsetzen, wie eine Kapsel haben«. Von ähnlichen Strategien der Beschäftigten berichtet etwa auch Im13. Zu vermuten ist demnach, dass die Last der Psyche in einer Art 'Bedrängnis' durch die Öffentlichkeit besteht. Man ist immer einem öffentlichen Blick ausgesetzt und von ihm bedrängt. Die Kunst der Verteidigung des Selbst setzt entsprechend als ein 'Schutz vor der Öffentlichkeit' an. Neben dem Walkman ließe sich das vielfach bevorzugte Arbeiten im Homeoffice anführen."
 (337)
