--- a/Texte/Rau_2010.md
+++ b/Texte/Rau_2010.md
@@ -8,15 +8,124 @@ Frankfurt a.M. 2010
 5. Empirischer Teil: 'Psychopolitik' und subjektivierte Arbeitsverhältnisse in der IT-Branche
 ==============================================================================
 
+5.4. 'Psychopolitische Linien' subjektivierter Arbeitsverhältnisse
+===================================================================
+
+Methodische Grundbegriffe
+-------------------------
+Die Untersuchung nimmt ihren Ausgang bei jeweils spezifischen strukturellen Bedingungen der Arbeitsverhältnisse, wie sie sich für die hier Interviewten darstellen. Ins Blickfeld sind somit zunächst spezifische Determinanten der Arbeitssituation gerückt, die sich aus der Weise der Organisation der Arbeit wie auch durch die Arbeitsstofflichkeit ergeben. Von dort aus werden unter vier analytischen Kategorien 'psychopolitische' Markierungen vorgenommen: Die erste Kategorie bezieht sich auf die affektive Dynamik, die durch die Arbeitsbedingungen in Gang gesetzt wird. Von Interesse ist hier, welche Bewegungen in affektiver Hinsicht strukturell angereizt werden und somit gleichsam in der Strukturlogik subjektivierter Arbeitsverhältnisse eingelassen sind. Mit der zweiten analytischen Kategorie wird der so entstehende affektive Effekt fokussiert. Thematisiert wird damit, welcher Effekt der Logik nach in affektiver Hinsicht evoziert wird und welche Weise 'zu sein' dies impliziert. Die dritte Analysekategorie markiert die Last der Psyche. Rekonstruiert wird hier die Erfahrung des Leids, das sich als negative Kehrseite potentiell einstellen kann. Mit der vierten Kategorie schließlich werden die Künste der Verteidigung des Selbst nachgezeichnet. Sie dient zur Annäherung an die Taktiken einer direkten Gegenregierung, die Beschäftigte individuell anwenden, um in einer Art Kampf um ihr Selbst zu bestehen.
+(293f)
+
+'Psychopolitisches' Kernelement
+-------------------------------
+Als einzelne betrachtet stellen sie jeweils unterschiedliche, kontextspezifische Varianten des 'psychopolitischen' Kernelements dar, der Sorge darum, aus sich heraus und authentisch Handlungsfähigkeit herstellen und das Leben gut meistern zu können (vgl. Kap. 4).
+(294)
+
+Stress
+------
+In den Interviews haben die meisten der befragten Personen Vieles von dem Gesuchten unter dem Stichwort »Stress« verhandelt.
+(294)
+
+5.4.1. Die 'Kraft des Ungenügens' – Erschöpfung
+=================================================
+
+Maßlose Arbeit
+--------------
+Die Arbeit »geht immer weiter«, hat keine strukturelle Grenze, ist ein »Rattenschwanz«, hat keinen Maßstab und kein Maß.
+(295)
+
+Maß der Arbeit
+--------------
+Gibt es weder einen one-best-way noch einen Weg, der vorgegeben ist, und verlagert sich gleichzeitig die Haupttätigkeit der Arbeit auf Denken und Kommunizieren, so verflüchtigt sich strukturell das Maß der Arbeit, was sich in einer »Kultur der langen Arbeitstage« niederschlägt (Massey 1999).
+(298)
+
+'Kraft des Ungenügens'
+-----------------------
+Sie macht zudem darauf aufmerksam, dass die extensive und intensive Maßlosigkeit seiner Arbeit eine Kraft hervorbringt, die ihn zum weiter arbeiten – nicht treibt, sondern – zieht; einen Pull-Effekt also produziert. Es ist dies eine 'Kraft des Ungenügens'.
+(300)
+
+'Kraft des Ungenügens'
+-----------------------
+Die 'Kraft des Ungenügens' als ein affektiver Effekt struktureller Maßlosigkeit evoziert ein spezifisches Begehren, eine spezifische Leidenschaft zur Arbeit. Man will für das Problem eine Lösung finden, die Sache (die potentiell nicht zu Ende zu bringen ist) zu Ende bringen, sich nach der Arbeit noch für die Arbeit updaten, weil es zu wenig ist, was man weiß oder gemacht hat und man noch mehr und anderes hätte tun können.
+(301)
+
+Nein-Sagen
+----------
+Zur Verteidigung des Selbst erscheint es daher wichtig – wie vielfach betont wird –, »nein zu sagen«, die Kunst des Nein-sagens zu erlernen (Iw1, Iw3, Im12).308 Nein zu sagen bedeutet hier zweierlei: Aufträge abzulehnen und zu beschließen, die geleistete Arbeit genügt, sie ist zu beenden. 
+(302)
+
 Die 'Kraft des Ungenügens' – Erschöpfung
 ----------------------------------------
 "Die erste Linie, mit der sich zeigen lässt, dass in subjektivierten Arbeitsverhältnissen auf dem Feld des Psychischen operiert wird, lautet der Logik nach dementsprechend: Den strukturellen Ausgangspunkt bildet die Maßlosigkeit der Arbeit; die 'Kraft des Ungenügens' markiert den affektiven Effekt; die affektive Dynamik ist durch 'Selbstverhetzung' gekennzeichnet; die Kunst zur Verteidigung des Selbst besteht im Nein-Sagen; die Last der Psyche ist die Erschöpfung."
 (303)
 
+
+5.4.2. Allein sein – Nur man selbst sein
+========================================
+
+Kunde vor Ort
+-------------
+Insbesondere jedoch lässt sich eine Flexibilisierung von Raum und Zeit bei jener Form der Fachberatung ablesen, die als Projektarbeit organisiert ist und beim Kunden vor Ort stattfindet.
+(303)
+
+Alleinsein
+----------
+Die Flexibilisierung des Raums von Arbeit äußert sich in diesem Sinne als eine Freisetzung der Beschäftigten aus Kontexten, in denen sie sozial verortet sind. Es ist zugleich ein Prozess einer strukturell evozierten Vereinzelung, eine affektive Dynamik der Vereinzelung. Der affektive Effekt besteht in einem Alleinsein, dem ein sozialer Unterbau fehlt.
+(304f)
+
+Ständig »unterwegs«
+--------------------
+Im7 erzählt, durch seine Arbeit sei er ständig »unterwegs«, auch »geistig«. Ihm fehle daher ein »innerer Mittelpunkt«, etwas in ihm, ein »Punkt«, eine »Höhle«, ein »geschützter Bereich«, wohin er sich zurückziehen oder sich »fallen lassen« könnte.
+(310)
+
+Von einem äußeren Standpunkt
+----------------------------
+In seiner Erzählung führt Im7 aber im Weiteren eine interessante Verbindung ein. Er sagt, dadurch, dass er durch eine ständige Hast nicht »wirklich mal tief in Ruhe in sich reinhören« kann, habe er auch keine Option, »von einem äußeren Standpunkt« aus über sich, sein »Tun« und seine »Probleme« zu »reflektieren«.
+(310)
+
+Selbst ist, dehnt sich aus
+--------------------------
+Was ihm fehlt, ist damit nicht die Fähigkeit zur Rollendistanz (vgl. Krömmelbein 2004), sondern die Fähigkeit, überhaupt eine Rolle einzunehmen, die als praktisches Selbstverhältnis wirksam werden könnte. Was er als Selbst ist, dehnt sich aus – und wird Fläche statt innere Tiefe. So »merkt« er auch seine »Grenzen« nicht, es ist nicht deutlich, wo sie verlaufen, und zwar letztlich deswegen nicht, weil es sein Selbst ist, das er nicht begrenzen kann, würde dies doch ein Verhältnis zu sich – welcher Art auch immer – voraussetzen. Wenn also das Selbst total wird, gibt es keinen inneren Mittelpunkt. Man ist immer und permanent nur man selbst; ohne Zentrum, wie auch ohne Grenzen und ohne Schutz. Man ist sehr einsam und in einem Zustand des 'Unzuhause', gerade weil man nur man selbst ist.
+(311)
+
 Allein sein – Nur man selbst sein
 ---------------------------------
 "Die zweite Linie, die im Rahmen subjektivierter Arbeitsverhältnisse auf ein politisches Spiel auf dem Feld des Psychischen verweist, beginnt demnach bei der strukturellen Flexibilisierung von Raum und Zeit. Die affektive Dynamik ist durch Vereinzelung gekennzeichnet; der affektive Effekt besteht im Alleinsein; die Kunst zur Verteidigung des Selbst ist durch ein soziales Zuhausemachen gekennzeichnet; die Last der Psyche ist durch den Zustand, 'nur man selbst sein zu können' markiert."
 (311)
+
+
+5.4.3. Selbstverhaftung/ Haftbarmachung des Selbst – Angst
+==========================================================
+
+Zeitknappheit
+-------------
+Sie wird evoziert durch das Zusammentreffen einer permanenten Zeitknappheit mit Lücken und Widersprüchen im System, die individuell gemeistert werden müssen.
+(311)
+
+Ständigen Bedrücktwerden
+------------------------
+Anders als die 'Kraft des Ungenügens', die eher als ein Pull-Effekt wirkt und zur Arbeit zieht, ist der Druck eine Kraft, die die Beschäftigten schiebt, pushed, eben drückt. Dies führt nicht dazu, dass die Arbeit tatsächlich »schneller« erledigt wird. Das Verhältnis zu ihr wird der Form indes nach »schneller«, man wird »nervös«; oder wie eine andere Beschäftigte bei sich selbst bemerkt: Die »Körpersprache« wird »einfach nervöser, hektischer, fahriger« (Iw3).
+(313)
+
+Versteckte Kopfarbeit
+---------------------
+Arbeitszeit zu bewältigen. Die Konsequenz davon ist, dass sie dieses Problem nicht etwa praktisch mit nach Hause nimmt, indem sie von dort aus Dinge erledigt. Vielmehr nimmt Iw1 es im Kopf mit. Sie arbeitet gedanklich weiter, genauer gesprochen arbeitet es in ihr weiter, so dass im Grunde genommen unzutreffend wäre, hier von einer versteckten Kopfarbeit zu sprechen: [...]
+(314)
+
+Haftbarmachung des Selbst
+-------------------------
+Denn was bewirkt wird, ist eine affektive Verhaftung des Selbst an das System der Arbeit. Es ist eine Selbstverhaftung im Sinne einer Haftbarmachung des Selbst. Man nimmt die Arbeit im Kopf mit nach Hause, und durch die Mitnahme haftet man sich nicht nur selbst gedanklich, affektiv an die Bedingungen, die zur Mitnahme angeregt haben, man macht sich	auch selbst	haftbar	für	die	Lösung	eines Problems.
+(315)
+
+Angst
+-----
+»Keine Lösung sehen« und zu meinen, keine Macht über die Situation zu haben, das sind die Komponenten der Angst, die sich hier als Last der Psyche Geltung verschaffen.
+(316)
+
+Abschalten
+----------
+Die Kunst zur Verteidigung des Selbst schließlich, die hier gefunden wird, besteht im Finden von Tätigkeiten oder Bezugssystemen, die »abschalten« lassen. Sport machen wird in diesem Zusammenhang genannt, das Zusammensein mit der Familie oder FreundInnen ebenso. Auch das Engagement für ein Hobby, in Vereinen oder politischen Gruppen wird erwähnt. All dies sind Taktiken, die vergessen machen, was bedrückt und ängstigt und aufhören lassen, über Probleme der Arbeit weiterhin nachzudenken. Die Beschäftigten versuchen auf diese Weise – teilweise sehr aktiv und bewusst – gleichsam die Haftbarmachung des Selbst/ Selbstverhaftung an die Arbeit zu lösen und das Selbstverhältnis mit anderen Systemen, Themen, Interessen neu und anders zu besetzen.
+(317)
 
 Selbstverhaftung/Haftbarmachung des Selbst – Angst
 --------------------------------------------------
