--- a/Texte/Rau_2010.md
+++ b/Texte/Rau_2010.md
@@ -132,10 +132,62 @@ Selbstverhaftung/Haftbarmachung des Selbst – Angst
 "Zusammengefasst bedeutet dies für die Logik der dritten 'psychopolitischen Linie': Die Verbindung aus Zeitverknappung und strukturellen Widersprüchen, die individuell zu lösen sind, bilden den Ausgangspunkt; die affektive Dynamik ist die Bewegung des Bedrücktwerdens als einem Druck, der nach 'Innen' geht; der affektive Effekt besteht in der Selbstverhaftung an die Arbeit, die gleichsam eine Haftbarmachung des Selbst impliziert; die Last der Psyche zeigt sich in der Angst (in schwacher Form in der Nervosität); schließlich gehört hier zur Kunst der Verteidigung des Selbst die Neubesetzung des Selbst."
 (317)
 
+
+5.4.4. Persönliche Identifizierung – Schuld
+===========================================
+
+Kontrollmechanismen
+-------------------
+Die Arbeitsverhältnisse der hier Befragten sind im Vergleich zum Taylorfordismus durch eine starke Rücknahme direkter und rigider Detailsteuerung gekennzeichnet. [...] Die Art der Realisierung wird den Beschäftigten überlassen, die infolgedessen beides, die Freiheit und den Zwang dazu haben, in Eigenregie in den ihnen gegebenen Rahmenbedingungen für die Erreichung der Ziele zu sorgen.
+(317)
+
+Arbeit an der eigenen Persönlichkeit
+------------------------------------
+Wird die Selbstverantwortung mit ihrer Konnotation der Entscheidungsfreiheit und der Möglichkeit, sich als Persönlichkeit zu entwickeln inauguriert, beginnt eine Bewegung der permanenten Sorge um Erfolg in der Arbeit. Nunmehr ist Erfolg immer ein persönlicher und ihn herzustellen gleichsam auch eine Arbeit an der eigenen Persönlichkeit.
+(319)
+
+Eigene Identität
+----------------
+Erfolgreich abgeschlossene Projekte – oder auch Aufträge – erhalten in der Logik dieser 'psychopolitischen Linie' den Charakter wohl geratener Kinder, die sodann selbst wiederum Aufschluss über die eigene (Erziehungs-/ Gestaltungs-) Kompetenz geben und solchermaßen in die eigene Identität eingehen.
+(319)
+
+Schuld
+------
+Der persönliche Misserfolg wird als ein Scheitern erfahren, aus der Verantwortung wird dabei Schuld.
+(320)
+
+Dauerstress
+-----------
+Dass dem so ist, liegt gleichsam in der Natur der Sache, denn als Arbeitssubjekt mit Persönlichkeit, kann der Stress, weil er über die Schuld an die Person gebunden ist, nicht leicht abgelegt werden kann.
+(321)
+
 Persönliche Identifizierung – Schuld
 -------------------------------------
 "Die vierte 'psychopolitische Linie' heißt dementsprechend: Den Ausgangspunkt bildet eine strukturell als Kontrollmodus in den Arbeitsprozess eingelassene Selbstverantwortung; die affektive Dynamik zeigt sich in einer Sorge um persönlichen Erfolg; der affektive Effekt besteht in der persönlichen Identifizierung; die Last der Psyche erscheint als Schuld; die Kunst zur Verteidigung des Selbst besteht in der Herstellung einer solidarischen, kollektiven Praxis zur Schuldabschwächung oder -vermeidung."
 (323)
+
+5.4.5. Politiker-Sein – Selbstabwertung
+=======================================
+
+Wechselseitige Abhängigkeit
+---------------------------
+Der Arbeitsprozess der IT-Fachkräfte ist maßgeblich durch kooperative Kommunikation gekennzeichnet, die mit einer hochgradigen wechselseitigen Abhängigkeit verbunden ist.
+(323)
+
+Politik-Machen
+--------------
+Die Fähigkeit, »Politik machen« zu können, so die daraus folgende These, wird in subjektivierten Arbeitsverhältnissen zur Kernkompetenz, mit Hilfe derer KollegInnen dazu zu bringen sind, dass sie gerne mit einem arbeiten, und Leute so »zusammenzubringen« sind, dass »sie das tun, was man will« (Im5).
+(330)
+
+Spannungsverhältnisses	Einzelkämpfer–Team
+-----------------------------------------
+Wenn der affektive Effekt 'im Zwang Politiker zu sein' besteht, so ist die damit verbundene affektive Dynamik eine virtuose Inszenierung von Souveränität, in der strategische Bündnispolitik, Maskulinität, Diplomatie und Bereitschaft zur Geselligkeit zu einer Gesamtgestalt	zusammen	finden.	Beides	befindet	sich	im	Herzen	des Spannungsverhältnisses	Einzelkämpfer–Team,	das	hier kommunikativer Kooperation und Abhängigkeit Gestalt annimmt.
+(334)
+
+Selbstzweifel und Selbstabwertung
+---------------------------------
+Was Iw3 hier letztlich beschreibt, ist die psychische Last, die sich einstellt, wenn es eben nicht gelingt, sich als Politiker im Spiel des 'Politik-Machens' zu inszenieren. Selbstzweifel und Selbstabwertung sind die Erfahrungen, die daran gekoppelt sind.
+(336)
 
 Politiker-Sein – Selbstabwertung
 --------------------------------
