--- a/Texte/Rau_2010.md
+++ b/Texte/Rau_2010.md
@@ -23,7 +23,7 @@ Als einzelne betrachtet stellen sie jeweils unterschiedliche, kontextspezifische
 
 Stress
 ------
-In den Interviews haben die meisten der befragten Personen Vieles von dem Gesuchten unter dem Stichwort »Stress« verhandelt.
+In den Interviews haben die meisten der befragten Personen Vieles von dem Gesuchten unter dem Stichwort "Stress" verhandelt.
 (294)
 
 5.4.1. Die 'Kraft des Ungenügens' – Erschöpfung
@@ -31,12 +31,12 @@ In den Interviews haben die meisten der befragten Personen Vieles von dem Gesuch
 
 Maßlose Arbeit
 --------------
-Die Arbeit »geht immer weiter«, hat keine strukturelle Grenze, ist ein »Rattenschwanz«, hat keinen Maßstab und kein Maß.
+Die Arbeit "geht immer weiter", hat keine strukturelle Grenze, ist ein "Rattenschwanz", hat keinen Maßstab und kein Maß.
 (295)
 
 Maß der Arbeit
 --------------
-Gibt es weder einen one-best-way noch einen Weg, der vorgegeben ist, und verlagert sich gleichzeitig die Haupttätigkeit der Arbeit auf Denken und Kommunizieren, so verflüchtigt sich strukturell das Maß der Arbeit, was sich in einer »Kultur der langen Arbeitstage« niederschlägt (Massey 1999).
+Gibt es weder einen one-best-way noch einen Weg, der vorgegeben ist, und verlagert sich gleichzeitig die Haupttätigkeit der Arbeit auf Denken und Kommunizieren, so verflüchtigt sich strukturell das Maß der Arbeit, was sich in einer "Kultur der langen Arbeitstage" niederschlägt (Massey 1999).
 (298)
 
 'Kraft des Ungenügens'
@@ -51,7 +51,7 @@ Die 'Kraft des Ungenügens' als ein affektiver Effekt struktureller Maßlosigkei
 
 Nein-Sagen
 ----------
-Zur Verteidigung des Selbst erscheint es daher wichtig – wie vielfach betont wird –, »nein zu sagen«, die Kunst des Nein-sagens zu erlernen (Iw1, Iw3, Im12).308 Nein zu sagen bedeutet hier zweierlei: Aufträge abzulehnen und zu beschließen, die geleistete Arbeit genügt, sie ist zu beenden. 
+Zur Verteidigung des Selbst erscheint es daher wichtig – wie vielfach betont wird –, "nein zu sagen", die Kunst des Nein-sagens zu erlernen (Iw1, Iw3, Im12).308 Nein zu sagen bedeutet hier zweierlei: Aufträge abzulehnen und zu beschließen, die geleistete Arbeit genügt, sie ist zu beenden. 
 (302)
 
 Die 'Kraft des Ungenügens' – Erschöpfung
@@ -73,19 +73,19 @@ Alleinsein
 Die Flexibilisierung des Raums von Arbeit äußert sich in diesem Sinne als eine Freisetzung der Beschäftigten aus Kontexten, in denen sie sozial verortet sind. Es ist zugleich ein Prozess einer strukturell evozierten Vereinzelung, eine affektive Dynamik der Vereinzelung. Der affektive Effekt besteht in einem Alleinsein, dem ein sozialer Unterbau fehlt.
 (304f)
 
-Ständig »unterwegs«
+Ständig "unterwegs"
 --------------------
-Im7 erzählt, durch seine Arbeit sei er ständig »unterwegs«, auch »geistig«. Ihm fehle daher ein »innerer Mittelpunkt«, etwas in ihm, ein »Punkt«, eine »Höhle«, ein »geschützter Bereich«, wohin er sich zurückziehen oder sich »fallen lassen« könnte.
+Im7 erzählt, durch seine Arbeit sei er ständig "unterwegs", auch "geistig". Ihm fehle daher ein "innerer Mittelpunkt", etwas in ihm, ein "Punkt", eine "Höhle", ein "geschützter Bereich", wohin er sich zurückziehen oder sich "fallen lassen" könnte.
 (310)
 
 Von einem äußeren Standpunkt
 ----------------------------
-In seiner Erzählung führt Im7 aber im Weiteren eine interessante Verbindung ein. Er sagt, dadurch, dass er durch eine ständige Hast nicht »wirklich mal tief in Ruhe in sich reinhören« kann, habe er auch keine Option, »von einem äußeren Standpunkt« aus über sich, sein »Tun« und seine »Probleme« zu »reflektieren«.
+In seiner Erzählung führt Im7 aber im Weiteren eine interessante Verbindung ein. Er sagt, dadurch, dass er durch eine ständige Hast nicht "wirklich mal tief in Ruhe in sich reinhören" kann, habe er auch keine Option, "von einem äußeren Standpunkt" aus über sich, sein "Tun" und seine "Probleme" zu "reflektieren".
 (310)
 
 Selbst ist, dehnt sich aus
 --------------------------
-Was ihm fehlt, ist damit nicht die Fähigkeit zur Rollendistanz (vgl. Krömmelbein 2004), sondern die Fähigkeit, überhaupt eine Rolle einzunehmen, die als praktisches Selbstverhältnis wirksam werden könnte. Was er als Selbst ist, dehnt sich aus – und wird Fläche statt innere Tiefe. So »merkt« er auch seine »Grenzen« nicht, es ist nicht deutlich, wo sie verlaufen, und zwar letztlich deswegen nicht, weil es sein Selbst ist, das er nicht begrenzen kann, würde dies doch ein Verhältnis zu sich – welcher Art auch immer – voraussetzen. Wenn also das Selbst total wird, gibt es keinen inneren Mittelpunkt. Man ist immer und permanent nur man selbst; ohne Zentrum, wie auch ohne Grenzen und ohne Schutz. Man ist sehr einsam und in einem Zustand des 'Unzuhause', gerade weil man nur man selbst ist.
+Was ihm fehlt, ist damit nicht die Fähigkeit zur Rollendistanz (vgl. Krömmelbein 2004), sondern die Fähigkeit, überhaupt eine Rolle einzunehmen, die als praktisches Selbstverhältnis wirksam werden könnte. Was er als Selbst ist, dehnt sich aus – und wird Fläche statt innere Tiefe. So "merkt" er auch seine "Grenzen" nicht, es ist nicht deutlich, wo sie verlaufen, und zwar letztlich deswegen nicht, weil es sein Selbst ist, das er nicht begrenzen kann, würde dies doch ein Verhältnis zu sich – welcher Art auch immer – voraussetzen. Wenn also das Selbst total wird, gibt es keinen inneren Mittelpunkt. Man ist immer und permanent nur man selbst; ohne Zentrum, wie auch ohne Grenzen und ohne Schutz. Man ist sehr einsam und in einem Zustand des 'Unzuhause', gerade weil man nur man selbst ist.
 (311)
 
 Allein sein – Nur man selbst sein
@@ -104,7 +104,7 @@ Sie wird evoziert durch das Zusammentreffen einer permanenten Zeitknappheit mit 
 
 Ständigen Bedrücktwerden
 ------------------------
-Anders als die 'Kraft des Ungenügens', die eher als ein Pull-Effekt wirkt und zur Arbeit zieht, ist der Druck eine Kraft, die die Beschäftigten schiebt, pushed, eben drückt. Dies führt nicht dazu, dass die Arbeit tatsächlich »schneller« erledigt wird. Das Verhältnis zu ihr wird der Form indes nach »schneller«, man wird »nervös«; oder wie eine andere Beschäftigte bei sich selbst bemerkt: Die »Körpersprache« wird »einfach nervöser, hektischer, fahriger« (Iw3).
+Anders als die 'Kraft des Ungenügens', die eher als ein Pull-Effekt wirkt und zur Arbeit zieht, ist der Druck eine Kraft, die die Beschäftigten schiebt, pushed, eben drückt. Dies führt nicht dazu, dass die Arbeit tatsächlich "schneller" erledigt wird. Das Verhältnis zu ihr wird der Form indes nach "schneller", man wird "nervös"; oder wie eine andere Beschäftigte bei sich selbst bemerkt: Die "Körpersprache" wird "einfach nervöser, hektischer, fahriger" (Iw3).
 (313)
 
 Versteckte Kopfarbeit
@@ -119,12 +119,12 @@ Denn was bewirkt wird, ist eine affektive Verhaftung des Selbst an das System de
 
 Angst
 -----
-»Keine Lösung sehen« und zu meinen, keine Macht über die Situation zu haben, das sind die Komponenten der Angst, die sich hier als Last der Psyche Geltung verschaffen.
+"Keine Lösung sehen" und zu meinen, keine Macht über die Situation zu haben, das sind die Komponenten der Angst, die sich hier als Last der Psyche Geltung verschaffen.
 (316)
 
 Abschalten
 ----------
-Die Kunst zur Verteidigung des Selbst schließlich, die hier gefunden wird, besteht im Finden von Tätigkeiten oder Bezugssystemen, die »abschalten« lassen. Sport machen wird in diesem Zusammenhang genannt, das Zusammensein mit der Familie oder FreundInnen ebenso. Auch das Engagement für ein Hobby, in Vereinen oder politischen Gruppen wird erwähnt. All dies sind Taktiken, die vergessen machen, was bedrückt und ängstigt und aufhören lassen, über Probleme der Arbeit weiterhin nachzudenken. Die Beschäftigten versuchen auf diese Weise – teilweise sehr aktiv und bewusst – gleichsam die Haftbarmachung des Selbst/ Selbstverhaftung an die Arbeit zu lösen und das Selbstverhältnis mit anderen Systemen, Themen, Interessen neu und anders zu besetzen.
+Die Kunst zur Verteidigung des Selbst schließlich, die hier gefunden wird, besteht im Finden von Tätigkeiten oder Bezugssystemen, die "abschalten" lassen. Sport machen wird in diesem Zusammenhang genannt, das Zusammensein mit der Familie oder FreundInnen ebenso. Auch das Engagement für ein Hobby, in Vereinen oder politischen Gruppen wird erwähnt. All dies sind Taktiken, die vergessen machen, was bedrückt und ängstigt und aufhören lassen, über Probleme der Arbeit weiterhin nachzudenken. Die Beschäftigten versuchen auf diese Weise – teilweise sehr aktiv und bewusst – gleichsam die Haftbarmachung des Selbst/ Selbstverhaftung an die Arbeit zu lösen und das Selbstverhältnis mit anderen Systemen, Themen, Interessen neu und anders zu besetzen.
 (317)
 
 Selbstverhaftung/Haftbarmachung des Selbst – Angst
@@ -176,7 +176,7 @@ Der Arbeitsprozess der IT-Fachkräfte ist maßgeblich durch kooperative Kommunik
 
 Politik-Machen
 --------------
-Die Fähigkeit, »Politik machen« zu können, so die daraus folgende These, wird in subjektivierten Arbeitsverhältnissen zur Kernkompetenz, mit Hilfe derer KollegInnen dazu zu bringen sind, dass sie gerne mit einem arbeiten, und Leute so »zusammenzubringen« sind, dass »sie das tun, was man will« (Im5).
+Die Fähigkeit, "Politik machen" zu können, so die daraus folgende These, wird in subjektivierten Arbeitsverhältnissen zur Kernkompetenz, mit Hilfe derer KollegInnen dazu zu bringen sind, dass sie gerne mit einem arbeiten, und Leute so "zusammenzubringen" sind, dass "sie das tun, was man will" (Im5).
 (330)
 
 Spannungsverhältnisses	Einzelkämpfer–Team
@@ -196,5 +196,5 @@ Politiker-Sein – Selbstabwertung
 
 Individualisierung zu Bedingungen der Masse
 -------------------------------------------
-"Eine sechste 'psychopolitische Linie' sei nur angedeutet, da ich sie nicht hinreichend durch das empirische Material absichern kann. Hier kommt der Raum als strukturelle Ausgangsgröße stärker ins Spiel: Einige der Interviewten haben ihren (festen oder mobilen) Arbeitsplatz in Großraumbüros. Da die Arbeitsanforderung für alle bedeutet, sowohl Denkarbeit als auch kommunikative Arbeit zu leisten, ist es für viele der Beschäftigten in stets lauten und offenen Räumen schwierig, konzentriert zu arbeiten. Die affektive Dynamik, die in Gang ist, könnte als 'Individualisierung zu Bedingungen der Masse' bezeichnet werden: Mehr oder weniger alle arbeiten in Verhältnissen, die sie ständig als Einzelkämpfer anruft, sie zugleich aber in infrastrukturellen Bedingungen platziert, die Menschen als Masse adressieren. Der affektive Effekt besteht dabei in dem Gefühl permanenten 'Öffentlichseins', das heißt, auf der Arbeit gibt es keinen Bereich, der tatsächliche Intimität erlauben würde. Alle hören potenziell immer alles mit und sehen, was andere tun und lassen (damit lässt sich natürlich das Öffentlichsein in Kategorien einer indirekten Steuerung entsprechenden Kontrolle diskutieren – die direkte Kontrolle wird u.a. durch das Öffentlichsein abgelöst –, darauf will ich hier aber nicht abheben). Iw3 etwa bemerkt, in der Freizeit habe man »Einsamkeit und Zweisamkeit«, auf der Arbeit hingegen nicht, »weil man immer Kollegen um sich rum hat, auch eigentlich immer beobachtet und auch beobachtet ist«. Ihr fehle dort ein »Rückzugsraum«. Der »einzige Rückzugsraum«, der existiere, sagt sie weiter, »das praktizieren da ja auch einige Kollegen, dass sie sich mal so ein Walkman aufsetzen, wie eine Kapsel haben«. Von ähnlichen Strategien der Beschäftigten berichtet etwa auch Im13. Zu vermuten ist demnach, dass die Last der Psyche in einer Art 'Bedrängnis' durch die Öffentlichkeit besteht. Man ist immer einem öffentlichen Blick ausgesetzt und von ihm bedrängt. Die Kunst der Verteidigung des Selbst setzt entsprechend als ein 'Schutz vor der Öffentlichkeit' an. Neben dem Walkman ließe sich das vielfach bevorzugte Arbeiten im Homeoffice anführen."
+"Eine sechste 'psychopolitische Linie' sei nur angedeutet, da ich sie nicht hinreichend durch das empirische Material absichern kann. Hier kommt der Raum als strukturelle Ausgangsgröße stärker ins Spiel: Einige der Interviewten haben ihren (festen oder mobilen) Arbeitsplatz in Großraumbüros. Da die Arbeitsanforderung für alle bedeutet, sowohl Denkarbeit als auch kommunikative Arbeit zu leisten, ist es für viele der Beschäftigten in stets lauten und offenen Räumen schwierig, konzentriert zu arbeiten. Die affektive Dynamik, die in Gang ist, könnte als 'Individualisierung zu Bedingungen der Masse' bezeichnet werden: Mehr oder weniger alle arbeiten in Verhältnissen, die sie ständig als Einzelkämpfer anruft, sie zugleich aber in infrastrukturellen Bedingungen platziert, die Menschen als Masse adressieren. Der affektive Effekt besteht dabei in dem Gefühl permanenten 'Öffentlichseins', das heißt, auf der Arbeit gibt es keinen Bereich, der tatsächliche Intimität erlauben würde. Alle hören potenziell immer alles mit und sehen, was andere tun und lassen (damit lässt sich natürlich das Öffentlichsein in Kategorien einer indirekten Steuerung entsprechenden Kontrolle diskutieren – die direkte Kontrolle wird u.a. durch das Öffentlichsein abgelöst –, darauf will ich hier aber nicht abheben). Iw3 etwa bemerkt, in der Freizeit habe man "Einsamkeit und Zweisamkeit", auf der Arbeit hingegen nicht, "weil man immer Kollegen um sich rum hat, auch eigentlich immer beobachtet und auch beobachtet ist". Ihr fehle dort ein "Rückzugsraum". Der "einzige Rückzugsraum", der existiere, sagt sie weiter, "das praktizieren da ja auch einige Kollegen, dass sie sich mal so ein Walkman aufsetzen, wie eine Kapsel haben". Von ähnlichen Strategien der Beschäftigten berichtet etwa auch Im13. Zu vermuten ist demnach, dass die Last der Psyche in einer Art 'Bedrängnis' durch die Öffentlichkeit besteht. Man ist immer einem öffentlichen Blick ausgesetzt und von ihm bedrängt. Die Kunst der Verteidigung des Selbst setzt entsprechend als ein 'Schutz vor der Öffentlichkeit' an. Neben dem Walkman ließe sich das vielfach bevorzugte Arbeiten im Homeoffice anführen."
 (337)
