Umwandlung markdown in HTML

--- a/Texte/Rau_2010.md
+++ b/Texte/Rau_2010.md
@@ -1,6 +1,8 @@
-Alexandra Rau
-Psychopolitik. Gouvernementalitätstheoretische Untersuchungen zu Macht und Subjekt in subjektivierten Arbeitsverhältnissen
-===========================================================================
+_Alexandra Rau_
+Psychopolitik
+=============
+Gouvernementalitätstheoretische Untersuchungen zu Macht und Subjekt in subjektivierten Arbeitsverhältnissen
+----------------------------------------------------------------------
 Inauguraldissertation zur Erlangung des Grades eines Doktors der Philosophie im Fachbereich Gesellschaftswissenschaften der Johann-Wolfgang-Goethe-Universität zu Frankfurt am Main
 Frankfurt a.M. 2010
 (Rau 2010)
@@ -109,7 +111,7 @@ Anders als die 'Kraft des Ungenügens', die eher als ein Pull-Effekt wirkt und z
 
 Versteckte Kopfarbeit
 ---------------------
-Arbeitszeit zu bewältigen. Die Konsequenz davon ist, dass sie dieses Problem nicht etwa praktisch mit nach Hause nimmt, indem sie von dort aus Dinge erledigt. Vielmehr nimmt Iw1 es im Kopf mit. Sie arbeitet gedanklich weiter, genauer gesprochen arbeitet es in ihr weiter, so dass im Grunde genommen unzutreffend wäre, hier von einer versteckten Kopfarbeit zu sprechen: ...
+Arbeitszeit zu bewältigen. Die Konsequenz davon ist, dass sie dieses Problem nicht etwa praktisch mit nach Hause nimmt, indem sie von dort aus Dinge erledigt. Vielmehr nimmt Iw1 es im Kopf mit. Sie arbeitet gedanklich weiter, genauer gesprochen arbeitet es in ihr weiter, so dass im Grunde genommen unzutreffend wäre, hier von einer versteckten Kopfarbeit zu sprechen: [...]
 (314)
 
 Haftbarmachung des Selbst
@@ -138,7 +140,7 @@ Selbstverhaftung/Haftbarmachung des Selbst – Angst
 
 Kontrollmechanismen
 -------------------
-Die Arbeitsverhältnisse der hier Befragten sind im Vergleich zum Taylorfordismus durch eine starke Rücknahme direkter und rigider Detailsteuerung gekennzeichnet. ... Die Art der Realisierung wird den Beschäftigten überlassen, die infolgedessen beides, die Freiheit und den Zwang dazu haben, in Eigenregie in den ihnen gegebenen Rahmenbedingungen für die Erreichung der Ziele zu sorgen.
+Die Arbeitsverhältnisse der hier Befragten sind im Vergleich zum Taylorfordismus durch eine starke Rücknahme direkter und rigider Detailsteuerung gekennzeichnet. [...] Die Art der Realisierung wird den Beschäftigten überlassen, die infolgedessen beides, die Freiheit und den Zwang dazu haben, in Eigenregie in den ihnen gegebenen Rahmenbedingungen für die Erreichung der Ziele zu sorgen.
 (317)
 
 Arbeit an der eigenen Persönlichkeit
